use Path.of instead of Paths.get for migration related files